--- a/eObrazovanje/backend/src/main/resources/application.properties
+++ b/eObrazovanje/backend/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url               = jdbc:mysql://localhost:3306/eobrazovanje
 spring.datasource.username          = root
 spring.datasource.password          = root
+spring.jpa.show-sql=true
 #
 #server.port=8080
 
