--- a/eObrazovanje/backend/src/main/resources/application.properties
+++ b/eObrazovanje/backend/src/main/resources/application.properties
@@ -3,16 +3,9 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url               = jdbc:mysql://localhost:3306/eobrazovanje
 spring.datasource.username          = root
 spring.datasource.password          = root
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #
 #server.port=8080
-
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto = update
 
